// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxFormField should render correct when value is true 1`] = `
<div
  className="CheckboxFormField"
>
  <label
    className="CheckboxFormField__Label"
    htmlFor="test-id"
  >
    <div
      className="CheckboxFormField__Label__Top"
    >
      <Checkbox
        id="test-id"
        name="test-name"
        onChange={[MockFunction]}
        value={true}
      />
      <ForwardRef(SvgCheckboxChecked) />
    </div>
    <div
      className="CheckboxFormField__Label__Error"
    />
  </label>
</div>
`;

exports[`CheckboxFormField should render correct with required props when value if false 1`] = `
<div
  className="CheckboxFormField"
>
  <label
    className="CheckboxFormField__Label"
    htmlFor="test-id"
  >
    <div
      className="CheckboxFormField__Label__Top"
    >
      <Checkbox
        id="test-id"
        name="test-name"
        onChange={[MockFunction]}
        value={false}
      />
      <ForwardRef(SvgCheckboxEmpty) />
    </div>
    <div
      className="CheckboxFormField__Label__Error"
    />
  </label>
</div>
`;
